--- a/symlinks/.iterm2/com.googlecode.iterm2.plist
+++ b/symlinks/.iterm2/com.googlecode.iterm2.plist
@@ -64,14 +64,18 @@
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>1169 110 445 103 0 0 1680 1027 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>530 477 620 392 0 0 1680 1027 </string>
+	<key>NSWindow Frame SessionsPreferences</key>
+	<string>203 1196 606 456 -126 1050 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>306 514 796 473 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 419 1060 608 0 0 1680 1027 </string>
+	<string>7 4 1060 608 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 419 1060 608 0 0 1680 1027 </string>
+	<string>8 378 1060 608 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>-1020 -582 1060 608 0 0 1680 1027 </string>
+	<string>0 419 1060 608 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
 	<string>0 419 1060 608 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
@@ -175,12 +179,16 @@
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.99833536148071289</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.26953411102294922</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.17362844944000244</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
@@ -654,13 +662,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.67800000000000005</real>
+				<real>0.67697173357009888</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.27000000000000002</real>
+				<real>0.27172678709030151</real>
 				<key>Red Component</key>
-				<real>0.023</real>
+				<real>0.029660860076546669</real>
 			</dict>
 			<key>Mouse Reporting</key>
 			<true/>
@@ -742,12 +750,32 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>59889DE8-2134-4402-88D5-D980D8954DD4</string>
+	<key>NoSyncLastTipTime</key>
+	<real>508867849.974554</real>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
+	<key>NoSyncPermissionToShowTip</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>507048941.80281001</real>
+	<key>NoSyncTipsToNotShow</key>
+	<array>
+		<string>000</string>
+		<string>0000</string>
+		<string>0001</string>
+		<string>0002</string>
+		<string>0003</string>
+		<string>0004</string>
+		<string>0005</string>
+		<string>0006</string>
+		<string>0007</string>
+		<string>0008</string>
+		<string>0009</string>
+		<string>0010</string>
+		<string>0011</string>
+	</array>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -783,6 +811,8 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>/Users/jeffcarbonella/.iterm2</string>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -792,7 +822,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-01-28T20:11:08Z</date>
+	<date>2017-02-15T13:51:01Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -810,7 +840,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.13</string>
+	<string>3.0.14</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>7</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
