--- a/symlinks/.android/analytics.settings
+++ b/symlinks/.android/analytics.settings
@@ -1,1 +1,1 @@
-{"userId":"1cf933ec-2100-4a1a-b0e1-56b63a714e35","hasOptedIn":false,"debugDisablePublishing":false,"saltSkew":0}
+{"userId":"1cf933ec-2100-4a1a-b0e1-56b63a714e35","hasOptedIn":false,"debugDisablePublishing":false,"saltValue":-1779510795128310370242359481621964251639616392555208472155,"saltSkew":617}
