--- a/symlinks/.gitconfig
+++ b/symlinks/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Jeff Carbonella
-  email = jeff@contactually.com
+  email = jeff.carbonella@gmail.com
   signingkey = 0E96F2F9E9A0C57D
 [push]
   default = simple
