--- a/symlinks/.gitconfig
+++ b/symlinks/.gitconfig
@@ -6,6 +6,7 @@
   default = simple
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  local-branches = !git branch -vv | cut -c 3- | awk '$3 !~/\\[/ { print $1 }'
 [color]
   ui = auto
 [color "branch"]
