--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ symlinks/.atom/dev
 symlinks/.atom/packages
 symlinks/.atom/storage
 
+symlinks/.atom/split-diff
+
 symlinks/.aws/credentials
 
 symlinks/.bashrc.secrets
