--- a/symlinks/.gitconfig
+++ b/symlinks/.gitconfig
@@ -7,6 +7,7 @@
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   local-branches = !git branch -vv | cut -c 3- | awk '$3 !~/\\[/ { print $1 }'
+  prune-remote = !git remote prune origin && git branch -vv | grep ': gone]' | awk '{print $1}' | xargs git branch -D
 [color]
   ui = auto
 [color "branch"]
@@ -28,3 +29,7 @@
   autosetuprebase = always
 [core]
   pager = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
+[credential]
+	helper = osxkeychain
+[interactive]
+	diffFilter = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight
