--- a/symlinks/.yarnrc
+++ b/symlinks/.yarnrc
@@ -2,4 +2,7 @@
 # yarn lockfile v1
 
 
-lastUpdateCheck 1493046451142
+email devops@gusto.com
+lastUpdateCheck 1537815468734
+prefix "/Users/jeff.carbonella/.yarn"
+username gusto-devops
